# YSSS

./: .dockerignore  .gitignore  Dockerfile  README.md  counters.json  docker-compose-non-dev.yml  docker-compose.yml  pyproject.toml  главный.py
docker-entrypoint-initdb.d/: 01-init.sql
src/: models.py  главный.py  робат.py  робот.py  хранилка.py
src/migrations/: 0001_initial.py
