[project]
name = "ysss"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.6",
    "tortoise-orm[asyncpg]>=1.1.5",
    "tzdata>=2025.3",
]

[tool.tortoise]
tortoise_orm = "src.хранилка.TORTOISE_ORM"

[tool.ruff]
line-length = 120
